fixed alignment on form

--- a/src/components/public/styles/form.css
+++ b/src/components/public/styles/form.css
@@ -14,10 +14,13 @@
 
 .form-subcontainer {
   margin-top: 5rem;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .white-container {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   height: 40rem;
   width: 60rem;
   display: flex;
@@ -33,8 +36,9 @@
   box-shadow: 1px 1px 10px rgba(97, 61, 61, 0.329);
 }
 
-
 .input-boxes {
   display: flex;
   margin-bottom: 40px;
+  align-items: center;
+  justify-content: center;
 }
